Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -19,7 +19,7 @@
       "type": "series",
       "name": "The Apothecary Diaries Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176301-AclxpmzlKoBM.jpg",
-      "description": "Genres: Drama, Mystery\nTags:Medicine/Historical/Female Protagonist/Politics/Royal Affairs/Ancient China/Primarily Adult Cast/Foreign/Work/Class Struggle/Heterosexual/Maids/Primarily Female Cast/Animals/Chibi/Primarily Male Cast\nThe second season of <i>Kusuriya no Hitorigoto</i>.<br><br>\n\nMaomao and Jinshi face palace intrigue as a pregnant concubine's safety and a looming conspiracy collide.<br><br>\n\n(Source: Crunchyroll News)"
+      "description": "Genres: Drama, Mystery\nTags:Medicine/Female Protagonist/Historical/Politics/Royal Affairs/Ancient China/Primarily Adult Cast/Foreign/Work/Class Struggle/Heterosexual/Maids/Primarily Female Cast/Animals/Chibi/Primarily Male Cast\nThe second season of <i>Kusuriya no Hitorigoto</i>.<br><br>\n\nMaomao and Jinshi face palace intrigue as a pregnant concubine's safety and a looming conspiracy collide.<br><br>\n\n(Source: Crunchyroll News)"
     },
     {
       "id": "tt9679542",
@@ -96,7 +96,7 @@
       "type": "series",
       "name": "Even Given the Worthless “Appraiser” Class, I’m Actually the Strongest",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178548-4QkzBuJAx8w7.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Drama, Fantasy, Romance\nTags:Mixed Gender Harem/Male Protagonist/Dungeon/Gore/Class Struggle/Primarily Female Cast/Bullying/Survival/Body Horror/Female Harem/Travel\nEin has been saddled with the job of \"Appraiser,\" the weakest and least fortunate of all the jobs one can be born with, as the only power it grants is the ability to appraise things.\n\nTreated cruelly by all and reduced to a litter collector by his peers, Ein has grown to hate himself and lives his days in spineless self-abasement. But when he meets Yuuri, the spirit of the World Tree, and her protector, Ursula the sage, Ein's fate takes a drastic turn.<br>\n<br>\nWith the gift of a Spirit Eye from Yuuri and the help of Ursula in learning how to use it, Ein grows stronger and stronger, until he's ready to take Yuuri on her long-desired journey to meet her World Tree's sisters. He goes on to overcome all sorts of challenges, armed with his natural kindness and his new-found courage. <br><br> (Source: Crunchyroll)"
+      "description": "Genres: Action, Adventure, Comedy, Drama, Fantasy, Romance\nTags:Mixed Gender Harem/Male Protagonist/Dungeon/Gore/Class Struggle/Primarily Female Cast/Bullying/Survival/Body Horror/Female Harem/Travel/Nudity\nEin has been saddled with the job of \"Appraiser,\" the weakest and least fortunate of all the jobs one can be born with, as the only power it grants is the ability to appraise things.\n\nTreated cruelly by all and reduced to a litter collector by his peers, Ein has grown to hate himself and lives his days in spineless self-abasement. But when he meets Yuuri, the spirit of the World Tree, and her protector, Ursula the sage, Ein's fate takes a drastic turn.<br>\n<br>\nWith the gift of a Spirit Eye from Yuuri and the help of Ursula in learning how to use it, Ein grows stronger and stronger, until he's ready to take Yuuri on her long-desired journey to meet her World Tree's sisters. He goes on to overcome all sorts of challenges, armed with his natural kindness and his new-found courage. <br><br> (Source: Crunchyroll)"
     },
     {
       "id": "tt33021990",
@@ -173,7 +173,7 @@
       "type": "series",
       "name": "The Daily Life of a Middle-Aged Online Shopper in Another World",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180292-GG0nwYZ5HeN7.jpg",
-      "description": "Genres: Ecchi, Fantasy\nTags:Isekai/Economics/Female Harem/Nekomimi/Nudity/Anthropomorphism/Kemonomimi/Food\nKenichi Hamada is just a regular, middle-aged man working as an illustrator in Japan. One day, he is transported to another world and wakes to find himself in the middle of a dangerous forest filled with ravenous monsters. He quickly discovers a massive online shopping site that can deliver him exactly what he needs. Join Kenichi on his search for relaxation in a new world!\n<BR><BR>\n(Source: Crunchyroll)"
+      "description": "Genres: Ecchi, Fantasy\nTags:Isekai/Economics/Nekomimi/Female Harem/Nudity/Anthropomorphism/Kemonomimi/Food\nKenichi Hamada is just a regular, middle-aged man working as an illustrator in Japan. One day, he is transported to another world and wakes to find himself in the middle of a dangerous forest filled with ravenous monsters. He quickly discovers a massive online shopping site that can deliver him exactly what he needs. Join Kenichi on his search for relaxation in a new world!\n<BR><BR>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt31169642",
@@ -201,7 +201,7 @@
       "type": "series",
       "name": "Magic Maker: How to Make Magic in Another World",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179297-qaG8nCqMpR3o.jpg",
-      "description": "Genres: Action, Adventure, Fantasy, Slice of Life\nTags:Magic/Isekai/Incest/Coming of Age/Rural/Goblin/Swordplay/Male Protagonist\nOn the night of his 30th birthday, one man’s dreams of wielding magic come true after he unexpectedly passes away. He wakes as Sion, a young child in another world. He and his elder sister, Marie, are the children of a lower-class noble family who govern their region. After receiving conflicting messages from their father, Sion and Marie set out on an adventure to uncover the magic.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Action, Adventure, Fantasy, Slice of Life\nTags:Magic/Isekai/Incest/Coming of Age/Rural/Goblin/Swordplay/Male Protagonist/Ghost\nOn the night of his 30th birthday, one man’s dreams of wielding magic come true after he unexpectedly passes away. He wakes as Sion, a young child in another world. He and his elder sister, Marie, are the children of a lower-class noble family who govern their region. After receiving conflicting messages from their father, Sion and Marie set out on an adventure to uncover the magic.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32034812",
@@ -246,6 +246,13 @@
       "description": "Genres: Action, Sci-Fi, Slice of Life\nTags:Shounen/Tokusatsu/Kaiju\nA special episode of <i>Kaijuu 8-gou</i> to be released alongside the compilation movie. <br><br>\n\nA day off… After spending so long training, Reno has forgotten what he’s supposed to do with free time. But when he sees that Hoshina is up to something, he goes on a mission to tail him with Iharu!<br><br>\n(Source: KAIJU NO. 8 EN Twitter)"
     },
     {
+      "id": "tt26713948",
+      "type": "series",
+      "name": "ISHURA Season 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176234-Wx2rAYr7YSD8.jpg",
+      "description": "Genres: Action, Drama, Fantasy\nTags:Battle Royale/Ensemble Cast/Espionage/Desert/Politics/Dystopian/Primarily Adult Cast/Military/Dragons/Robots/Gore\nThe second season of <i>ISHURA<i>."
+    },
+    {
       "id": "tt34621467",
       "type": "series",
       "name": "Promise of Wizard",
@@ -253,25 +260,18 @@
       "description": "Genres: Fantasy\nTags:Magic/Ensemble Cast/Primarily Male Cast/Isekai/Witch/Female Protagonist/Primarily Adult Cast/Male Harem/Twins/War\nOn a moonlit night, Akira Masaki finds herself in a magical world where wizards and humans coexist. Every year, they must face an enormous, deadly moon that attacks the planet. Their only hope lies with the Wizards of the Sage, appointed to fight the supernatural threat. But Akira soon discovers she wasn’t summoned by chance—she was chosen to lead them in battle.<br>\n<br>\n(Source: Crunchyroll)<br>\n<br>\n<i>Note: Animation project for Mahoutsukai no Yakusoku announced during the stream event \"Mahoutsukai no Yakusoku 4-Shuunen Kinen Tokuban: Mahoyaku 4-Shuunen Goukon\" held on Nov 12, 2023."
     },
     {
-      "id": "tt26713948",
-      "type": "series",
-      "name": "ISHURA Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176234-Wx2rAYr7YSD8.jpg",
-      "description": "Genres: Action, Drama, Fantasy\nTags:Battle Royale/Ensemble Cast/Espionage/Desert/Politics/Dragons/Robots/Gore/Military\nThe second season of <i>ISHURA<i>."
-    },
-    {
       "id": "tt33503859",
       "type": "series",
       "name": "Grisaia: Phantom Trigger",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx145740-KtUZ6O59DaDq.jpg",
-      "description": "Genres: Action\nTags:Primarily Female Cast/Guns/Military/LGBTQ+ Themes\nSeveral years after <i>The Fruit of Grisaia</i>...<br>\n<br>\nWhat was once \"Mihama Academy,\" a sanctuary for young girls, has now been transformed into a SORD (Special Organization for Research & Development) training school dedicated to fostering talent for national defense. Rena and Maki specialize in firearms, Tohka and Gumi excel at sniping, Chris handles explosives and data processing, and Murasaki is a skilled ninja for intelligence operations. Together, they take on cases too complex for the police or Self-Defense Forces, repeatedly facing dangerous missions. This is the story of these young girls, painted in blood and gunpowder.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Action\nTags:Primarily Female Cast/Guns/Military/LGBTQ+ Themes/War\nSeveral years after <i>The Fruit of Grisaia</i>...<br>\n<br>\nWhat was once \"Mihama Academy,\" a sanctuary for young girls, has now been transformed into a SORD (Special Organization for Research & Development) training school dedicated to fostering talent for national defense. Rena and Maki specialize in firearms, Tohka and Gumi excel at sniping, Chris handles explosives and data processing, and Murasaki is a skilled ninja for intelligence operations. Together, they take on cases too complex for the police or Self-Defense Forces, repeatedly facing dangerous missions. This is the story of these young girls, painted in blood and gunpowder.<br>\n<br>\n(Source: Crunchyroll)"
     },
     {
       "id": "tt32832412",
       "type": "series",
       "name": "Anyway, I'm Falling in Love with You.",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx175409-ZYYEw0H6QypN.jpg",
-      "description": "Genres: Drama, Romance\nTags:Shoujo/Female Protagonist/Male Harem/Heterosexual/Primarily Male Cast/Swimming/School/Coastal/Drawing\nIt's July 1, 2020. Mizuha, a high school second-year, is having the worst seventeenth birthday ever. She's missing her chance to get close to the older student she admires, and her parents didn't even remember that it's her birthday. Worst of all, there's a new and unknown infectious disease making the rounds, so all her club tournaments and school trips have been canceled.<br>\n<br>\nShe's convinced that she'll never have the dazzling youth that she's always dreamed of... but then her childhood friend, Mizuki, suddenly declares himself a candidate to be her boyfriend.<br>\n<br>\nThis is a school youth story about four childhood friends who grew up like family, one being the heroine, Nishino Mizuha, and the four boys she grew up with whom she sees as family.\n<br><br>(Source: Crunchyroll)"
+      "description": "Genres: Drama, Romance\nTags:Shoujo/Female Protagonist/Male Harem/Heterosexual/Primarily Male Cast/School/Swimming/Coastal/Drawing\nIt's July 1, 2020. Mizuha, a high school second-year, is having the worst seventeenth birthday ever. She's missing her chance to get close to the older student she admires, and her parents didn't even remember that it's her birthday. Worst of all, there's a new and unknown infectious disease making the rounds, so all her club tournaments and school trips have been canceled.<br>\n<br>\nShe's convinced that she'll never have the dazzling youth that she's always dreamed of... but then her childhood friend, Mizuki, suddenly declares himself a candidate to be her boyfriend.<br>\n<br>\nThis is a school youth story about four childhood friends who grew up like family, one being the heroine, Nishino Mizuha, and the four boys she grew up with whom she sees as family.\n<br><br>(Source: Crunchyroll)"
     },
     {
       "id": "tt33310997",
