Github actions updated anime season data

--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -1,114 +1,74 @@
 {
   "metas": [
     {
-      "id": "tt33347496",
+      "id": "kitsu:49215",
       "type": "movie",
-      "name": "Kaijuu 8-gou Movie",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179998-hbLOxbjh6ev5.jpg",
+      "name": "Kobayashi-san Chi no Maidragon Samishii Gariya no Ryuu",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181839-oNulf7nWUrPp.png",
       "behaviorHints": {
-        "defaultVideoId": "tt33347496"
+        "defaultVideoId": "kitsu:49215"
       },
-      "description": "Genres: Action, Sci-Fi\nTags:Shounen/Tokusatsu/Kaiju/Urban Fantasy\nCompilation movie of <i>Kaijuu 8-gou</i>."
+      "description": "Genres: Fantasy, Slice of Life\nTags:Dragons/Seinen/Maids/Found Family/Female Protagonist\n<i>\"I don’t want to let go of her hand. Because, we are a family.\"</i>\n<br><br>\nTheatrical follow-up to the second season <i>Kobayashi-san Chi no Maidragon S</i> and <i>Kobayashi-san Chi no Maidragon S: Nippon no Omotenashi (Attend wa Dragon desu)</i> OVA.<br><br>\n\n(Source: Kyoto Animation YouTube Channel)"
     },
     {
-      "id": "tt33050528",
+      "id": "tt35444710",
       "type": "movie",
-      "name": "COLORFUL STAGE! The Movie: A Miku Who Can't Sing",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179878-9rF40FPWqpgY.jpg",
+      "name": "Meitantei Conan: Sekigan no Flashback",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185212-fMiVtbxva98b.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt33050528"
+        "defaultVideoId": "tt35444710"
       },
-      "description": "Genres: Drama, Music\nTags:Band/Vocal synth/Primarily Teen Cast/Urban/Primarily Female Cast/Idol/Urban Fantasy/Artificial Intelligence/Transgender/Female Protagonist/Virtual World\nSet in modern day Shibuya, Ichika Hoshino, a high school girl and street musician, encounters an unknown version of Hatsune Miku after hearing a Miku song that she'd never heard before in a CD store. Ichika learns that this version of Miku is having trouble reaching people with her songs, so together they team up to try to touch the hearts of their audience through music.<br><br>\n\n(Source: Crunchyroll News, edited)"
+      "description": "Genres: Mystery\nTags:Crime/Detective\nThe 28th <i>Detective Conan</i> movie."
     },
     {
-      "id": "tt33503342",
+      "id": "tt35419807",
       "type": "movie",
-      "name": "MAKE A GIRL",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx154064-qYnRF4BQsuM6.png",
+      "name": "Boku to Roboco Movie",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx166249-TUrop163TkJ8.png",
       "behaviorHints": {
-        "defaultVideoId": "tt33503342"
+        "defaultVideoId": "tt35419807"
       },
-      "description": "Genres: Romance\nTags:Full CGI/Heterosexual\nThe story is centered around the main character, Akira, and his scientifically created girlfriend, No. 0.<br>\n<br>\n(Source: Crunchyroll)"
+      "description": "Genres: Comedy, Slice of Life\nTags:Robots/Shounen/Maids\nnull"
     },
     {
-      "id": "tt21996220",
+      "id": "tt35720302",
       "type": "movie",
-      "name": "Versailles no Bara Movie",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx154392-Z2HQYstZMZ23.jpg",
+      "name": "Princess Principal: Crown Handler - Chapter 4",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx186716-I873Q1vDa3Xt.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt21996220"
+        "defaultVideoId": "tt35720302"
       },
-      "description": "Genres: Adventure, Drama, Romance\nTags:Historical/Foreign/Shoujo/Military/Ojou-sama/Female Protagonist/Heterosexual/Musical Theater/Royal Affairs/Primarily Adult Cast/Swordplay/Guns/Crossdressing\nMovie project commemorating the 50th anniversary of the <i>Versailles no Bara</i> manga's publication. <br><br>\nHoping to unite their countries with an alliance, The Empress of Austria arranges her daughter, the delightful yet spoiled Marie Antoinette, to marry the crown prince of France, Louis XVI. Upon arriving in Versailles, the Austrian princess meets Oscar Francois de Jarjayes, Captain of the Royal Guards—a seemingly dashing young man—but to Antoinette's astonishment, he is in fact a woman!\n <br><br>\nThe youngest daughter of a noble family with a prominent lack of a male heir, Oscar was raised as a boy to continue the family's military legacy. Suffocated by the rigid rules associated with her new position and longing for companionship, Antoinette immediately takes a liking to this intriguing young woman, and wastes no time befriending her. However, as the childish new queen foolishly abuses her power, Oscar is conflicted between maintaining her loyalty to the royal family and addressing the growing concern of poverty among the common people.\n <br><br>\nRecalling the events of the French Revolution, Versailles no Bara depicts the struggles of two women unjustly burdened by family expectations. Yet, despite being forced to deny their identities at the expense of personal happiness, they march on to become key players in the annals of history.\n <br><br>\n(Source: MAL Rewrite)"
+      "description": "Genres: Action, Adventure, Mystery, Sci-Fi\nTags:Primarily Teen Cast/Primarily Female Cast/Politics/Espionage/Steampunk/Female Protagonist\nThe fourth out of six movie sequels to the <i>Princess Principal</i> TV series."
     },
     {
-      "id": "tt33507588",
+      "id": "tt35652362",
       "type": "movie",
-      "name": "Senpai wa Otokonoko: Ame Nochi Hare",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182158-ztLTD2FKPnrd.jpg",
+      "name": "Kaitou Queen no Yuuga na Vacances",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx162682-rnE3R6x3I4KY.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt33507588"
+        "defaultVideoId": "tt35652362"
       },
-      "description": "Genres: Comedy, Drama, Romance\nTags:Crossdressing/Agender/LGBTQ+ Themes/Primarily Teen Cast\nTheatrical follow-up to the TV anime <i>Senpai wa Otokonoko</i>."
+      "description": "Genres: Mystery\nTags:\nAnnounced at the \"Mirage QUEEN Prefers Parties\" event, that a new <i>Mirage QUEEN</i> anime has been greenlit.<br><br>\n(Source: Anime News Network, edited)"
     },
     {
-      "id": "tt32574149",
+      "id": "tt35652414",
       "type": "movie",
-      "name": "Mononoke: Hinezumi",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179852-tPwGOkCxA8em.jpg",
+      "name": "Uta no☆Prince-sama♪ TABOO NIGHT XXXX",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx172393-8dwjbJYYGi9W.jpg",
       "behaviorHints": {
-        "defaultVideoId": "tt32574149"
+        "defaultVideoId": "tt35652414"
       },
-      "description": "Genres: Fantasy, Horror, Mystery, Psychological, Supernatural\nTags:\nSequel to <i>Mononoke: Karakasa</i> and second movie in the <i>Mononoke</i> movie trilogy."
+      "description": "Genres: Music\nTags:Idol/Ensemble Cast\nThe third movie in the UtaPri franchise, spotlighting the idol group QUARTET NIGHT."
     },
     {
-      "id": "tt35109348",
+      "id": "tt30442574",
       "type": "movie",
-      "name": "Aldnoah.Zero (Re+)",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185714-YYhn41FIOfmM.jpg",
+      "name": "Tabekko Doubutsu THE MOVIE",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b180124-kLrE636DrdKx.png",
       "behaviorHints": {
-        "defaultVideoId": "tt35109348"
+        "defaultVideoId": "tt30442574"
       },
-      "description": "Genres: Action, Drama, Mecha, Sci-Fi\nTags:Super Robot\nA movie compilation of the first and second cours of <i>Aldnoah.Zero</i> and also includes the new animation to conclude the series, <i>Aldnoah.Zero: Ame no Danshou</i>."
-    },
-    {
-      "id": "tt34602994",
-      "type": "movie",
-      "name": "Binan Koukou Chikyuu Bouei-bu ETERNAL LOVE!",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179838-qCOaqbhZ8eFX.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt34602994"
-      },
-      "description": "Genres: Comedy, Mahou Shoujo, Sci-Fi, Slice of Life\nTags:Primarily Male Cast\nA new film announced for the 10th anniversary of <i>Binan Koukou Chikyuu Bouei-bu</i>. <br><br>\n<i>Note: Relations are provisional and will be updated when more info is announced. </i>"
-    },
-    {
-      "id": "tt33512868",
-      "type": "movie",
-      "name": "Doraemon: Nobita no e Sekai Monogatari",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx182333-t7cPjoPHHPBp.png",
-      "behaviorHints": {
-        "defaultVideoId": "tt33512868"
-      },
-      "description": "Genres: Action, Adventure, Fantasy\nTags:Kids\nDoraemon, Nobita, and friends enter a painting into a medieval European world. In the painting, they meet Claire and Milo, children from the country of Artoria. They also encounter a small demon with wings named Chai. Together, they face a powerful enemy for a legendary jewel.\n<br><br>\n(Source: Anime News Network)"
-    },
-    {
-      "id": "tt31957398",
-      "type": "movie",
-      "name": "Thunderbolt Fantasy: Touriken Yuuki - Saishuushou",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176432-jqq2IZrjYaiZ.jpg",
-      "behaviorHints": {
-        "defaultVideoId": "tt31957398"
-      },
-      "description": "Genres: Action, Drama, Fantasy\nTags:Puppetry\nTheatrical follow-up to <i>Thunderbolt Fantasy: Touriken Yuuki 4</i>."
-    },
-    {
-      "id": "tt35438167",
-      "type": "movie",
-      "name": "Oshiri Tantei: Star and Moon",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185643-2NbMhFMCtXOe.png",
-      "behaviorHints": {
-        "defaultVideoId": "tt35438167"
-      },
-      "description": "Genres: Comedy, Mystery\nTags:\nStory begins when Koala asks Butt Detective to find a missing relative who disappeared from an idol contest. The case takes Butt Detective to Stardust Island, the site of the contest, and also the home of the international criminal organization Phantom Thief Academy, headed by Phantom Thief G. Here, the organization advances its secret conspiracy, codenamed the Dark Age Plan. Butt Detective enters Stardust Island under the guise of an idol. At the same time, he joins forces with Phantom Thief U, who is out to steal back the valuable Moonlight Stone from Phantom Thief G. The story will also reveal more about Brown's past.\n<br><br>\n(Source: Anime News Network, edited)\n"
+      "description": "Genres: Slice of Life\nTags:\nMovie based on the Tabekko Doubutsu brand of animal-shaped butter biscuits."
     }
   ]
 }
