--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -179,7 +179,7 @@
       "id": "tt32779862",
       "type": "series",
       "name": "Aru Majo ga Shinu Made",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178701-ZUZAcQi6bYHD.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178701-OA537qbje5AU.jpg",
       "description": "Genres: Adventure, Drama, Fantasy\nTags:Female Protagonist/Primarily Female Cast/Magic/Witch/Curses\nOn her seventeenth birthday, the apprentice witch Meg learns that she only has one year left to live. Her teacher, the long-lived witch Faust, explains that the only way to undo the death curse is to collect tears of joy and grow the seed of life. To find them, Meg will have to leave the sheltered life she's always known and head out into the world. There will be meetings, partings, and friendships aplenty, and of course many tears. Meg will learn that the most important lessons for a witch are bright, sweet, and somewhat heart-wrenching.<br>\n<br>\n(Source: Yen Press) "
     },
     {
@@ -207,8 +207,8 @@
       "id": "tt35437780",
       "type": "series",
       "name": "Zatsu Tabi: That's Journey",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx165445-1LPs4hBqLl14.png",
-      "description": "Genres: Adventure, Comedy, Drama, Slice of Life\nTags:Travel/Iyashikei/Female Protagonist/Seinen\nChika Suzugamori, a rookie manga artist, has been getting rejected every time she submits a new draft. On the verge of giving up, she suddenly gets the idea of going on a journey.\n<br><br>\n<i>*Based on the real life travels of mangaka Chika Suzugamori.</i>"
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx165445-DqtBiIGw8ER4.jpg",
+      "description": "Genres: Adventure, Comedy, Drama, Slice of Life\nTags:Travel/Iyashikei/Female Protagonist/Drawing/Seinen\nChika Suzugamori, a rookie manga artist, has been getting rejected every time she submits a new draft. On the verge of giving up, she suddenly gets the idea of going on a journey.\n<br><br>\n<i>*Based on the real life travels of mangaka Chika Suzugamori.</i>"
     },
     {
       "id": "tt35014218",
