Github actions updated anime season data

--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -26,7 +26,7 @@
       "type": "series",
       "name": "Lazarus",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx167336-hMpEKtKTemuJ.png",
-      "description": "Genres: Action, Sci-Fi\nTags:Cyberpunk/Parkour/Urban/Prison/Medicine/Male Protagonist\nThe year is 2052 — an era of unprecedented peace and prosperity prevails across the globe. The reason for this: mankind has been freed from sickness and pain. Nobel Prize winning neuroscientist Dr. Skinner has developed a miracle cure-all drug with no apparent drawbacks called Hapuna. Hapuna soon becomes ubiquitous… and essential. However, soon after Hapuna is officially introduced, Dr. Skinner vanishes.\n<br><br>\nThree years later, the world has moved on. But Dr. Skinner has returned — this time, as a harbinger of doom. Skinner announces that Hapuna has a short half-life. Everyone who has taken it will die approximately three years later. Death is coming for this sinful world — and coming soon.\n<br><br>\nAs a response to this threat, a special task force of 5 agents is gathered from across the world to save humanity from Skinner’s plan. This group is called “Lazarus.” Can they find Skinner and develop a vaccine before time runs out?\n<br><br>\n<i>(Source: Adult Swim)</i>"
+      "description": "Genres: Action, Sci-Fi\nTags:Cyberpunk/Parkour/Urban/Medicine/Male Protagonist/Prison\nThe year is 2052 — an era of unprecedented peace and prosperity prevails across the globe. The reason for this: mankind has been freed from sickness and pain. Nobel Prize winning neuroscientist Dr. Skinner has developed a miracle cure-all drug with no apparent drawbacks called Hapuna. Hapuna soon becomes ubiquitous… and essential. However, soon after Hapuna is officially introduced, Dr. Skinner vanishes.\n<br><br>\nThree years later, the world has moved on. But Dr. Skinner has returned — this time, as a harbinger of doom. Skinner announces that Hapuna has a short half-life. Everyone who has taken it will die approximately three years later. Death is coming for this sinful world — and coming soon.\n<br><br>\nAs a response to this threat, a special task force of 5 agents is gathered from across the world to save humanity from Skinner’s plan. This group is called “Lazarus.” Can they find Skinner and develop a vaccine before time runs out?\n<br><br>\n<i>(Source: Adult Swim)</i>"
     },
     {
       "id": "tt34119820",
@@ -81,7 +81,7 @@
       "id": "tt35346400",
       "type": "series",
       "name": "Danjo no Yuujou wa Seiritsu suru? (Iya, Shinai!!)",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx153554-ddOxuOTuP6cd.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx153554-gTVSkLhlcCzM.png",
       "description": "Genres: Comedy, Romance\nTags:Heterosexual/School/Love Triangle\nAt a rural junior high school, a boy and a girl vowed eternal friendship, and two years passed smoothly in their relationship......! <br>\n<br>\nThe story follows the lives of two young people, Inuzuka Himari, who has yet to find her first love, and Natsume Yuu, a flower-loving boy, who remained best friends in their second year of high school, together in the gardening club. Sometimes Hiyori will tease him by say things like, \"If Yu can't get married, I'll have to take the blame. It's hard when your brother calls him 'brother-in-law!\" But when Yuu is reunited with his first crush from the past, the wheels of their relationship suddenly started to turn! Will Himari's newfound feelings help her break free from her \"ideal friend\" status? "
     },
     {
@@ -138,7 +138,7 @@
       "type": "series",
       "name": "Mobile Suit Gundam GQuuuuuuX",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185213-lRRgmMYJfjJ9.jpg",
-      "description": "Genres: Drama, Mecha, Sci-Fi\nTags:Robots/Female Protagonist/Space/Super Robot/Real Robot/Fugitive\nAmate Yuzuriha is a high-school student living peacefully in a space colony floating in outer space.<br><br>\nWhen she meets a war refugee named Nyaan, Amate is drawn into the illegal mobile suit dueling sport known as Clan Battle.<br><br>\nUnder the entry name \"Machu,\" she throws herself into fierce battle day after day, piloting the GQuuuuuuX. Then an unidentified Gundam mobile suit pursued by both the space force and the police appears before her, along with its pilot, a boy named Shuji.<br><br>\nNow their world is about to enter a new era.<br><br>\n(Source: Official Site)<br><br>\n<i>Note: Prior to broadcasting, \"Mobile Suit Gundam GQuuuuuuX -Beginning-\" — a theatrical pre-screening of the first 3 episodes edited together— debuted in Japan on January 17, 2025 and in North America on February 28, 2025.</i>"
+      "description": "Genres: Drama, Mecha, Sci-Fi\nTags:Female Protagonist/Robots/Space/Real Robot/Super Robot/Fugitive\nAmate Yuzuriha is a high-school student living peacefully in a space colony floating in outer space.<br><br>\nWhen she meets a war refugee named Nyaan, Amate is drawn into the illegal mobile suit dueling sport known as Clan Battle.<br><br>\nUnder the entry name \"Machu,\" she throws herself into fierce battle day after day, piloting the GQuuuuuuX. Then an unidentified Gundam mobile suit pursued by both the space force and the police appears before her, along with its pilot, a boy named Shuji.<br><br>\nNow their world is about to enter a new era.<br><br>\n(Source: Official Site)<br><br>\n<i>Note: Prior to broadcasting, \"Mobile Suit Gundam GQuuuuuuX -Beginning-\" — a theatrical pre-screening of the first 3 episodes edited together— debuted in Japan on January 17, 2025 and in North America on February 28, 2025.</i>"
     },
     {
       "id": "tt16741414",
@@ -162,18 +162,18 @@
       "description": "Genres: Action, Drama, Mystery, Sci-Fi\nTags:Female Protagonist/Detective/Male Protagonist/Crime\nIn 1992, a pandemic of viral encephalitis shook the world. The medical technology that saved humanity evolved into <i>“Your Forma”</i>—an invasive information device implanted into the brain. In this world where every sight, sound, and even emotion is recorded, investigating major crimes means diving into the collective data, a job reserved for special detectives called “Electronic Investigator.”\n<br><br>\nEchika Hieda, a prodigious “Electronic Investigator” assigned at an astonishingly young age, stands isolated by her exceptional talent. Her newly assigned partner is Harold, a blonde, blue-eyed humanoid “Amicus.” Together, this unrivaled duo will expose every hidden secret.\n<br><br>\n(Source: \"It’s Anime\" YouTube Channel)"
     },
     {
-      "id": "tt35437675",
-      "type": "series",
-      "name": "Uma Musume: Cinderella Gray",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180516-lebpoKLkw6E3.jpg",
-      "description": "Genres: Drama, Sports\nTags:Athletics/Primarily Female Cast/Female Protagonist/Kemonomimi/Seinen/Historical\n<i>Umamusume: Cinderella Gray</i> tells the tale of a lone girl in the destitute countryside of Kasamatsu who will soon rock Japan with her feet. This Cinderella story of youthful drama and running begins at a humble starting gate!"
-    },
-    {
       "id": "tt34814625",
       "type": "series",
       "name": "Ore wa Seikan Kokka no Akutoku Ryoushu! ",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183274-fGCQJVV1zHP4.png",
       "description": "Genres: Action, Adventure, Comedy, Ecchi, Fantasy, Mecha, Romance, Sci-Fi\nTags:Male Protagonist\nIn his last life, Liam lived as a moral, responsible person...but died deep in debt and betrayed by his wife. Reborn into the ruling family of a vast interstellar empire, Liam knows that life is divided into the downtrodden and the ones who do the stomping, so this time he's going to take what he wants and live for himself. But somehow, things refuse to work out that way. Despite doing his best to become a tyrant, Liam's decisions lead to nothing but peace and prosperity for the empire under his rule, and he just gets more and more popular!\n<br><br>\n(Source: Seven Seas Entertainment)"
+    },
+    {
+      "id": "tt35437675",
+      "type": "series",
+      "name": "Uma Musume: Cinderella Gray",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180516-lebpoKLkw6E3.jpg",
+      "description": "Genres: Drama, Sports\nTags:Athletics/Primarily Female Cast/Female Protagonist/Kemonomimi/Seinen/Historical\n<i>Umamusume: Cinderella Gray</i> tells the tale of a lone girl in the destitute countryside of Kasamatsu who will soon rock Japan with her feet. This Cinderella story of youthful drama and running begins at a humble starting gate!"
     },
     {
       "id": "tt32779862",
@@ -214,7 +214,7 @@
       "id": "tt35014218",
       "type": "series",
       "name": "Kanchigai no Atelier Meister: Eiyuu Party no Moto Zatsuyougakari ga, Jitsu wa Sentou Igai ga SSS Rank Datta to Iu Yoku Aru Hanashi",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183133-TpvDaUQliwDF.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183133-SSeg5j1UrMDG.png",
       "description": "Genres: Action, Adventure, Fantasy\nTags:Male Protagonist\nOne day, Kurt, a kind-hearted boy, is suddenly kicked out of the Hero's Party for being \"useless\". He finds that his aptitude for weapons, magic, and all other combat-related skills is the lowest rank, so he takes odd-jobs repairing the castle walls and digging for minerals to make a living, where his exceptional abilities are immediately revealed. He proves to be skillful in cooking, building, mining, crafting magical tools--in fact, his aptitude for every skill unrelated to combat had an SSS-ranking! Kurt, however, seems completely unaware to his talent and ends up saving people, the town, and even the country through his unaware actions!?<br>\n<br>\n(Source: Alpha Manga)"
     },
     {
@@ -327,7 +327,7 @@
       "type": "series",
       "name": "Uchuujin MuuMuu",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185070-yxFQy9DsTGVM.jpg",
-      "description": "Genres: Mystery, Sci-Fi, Slice of Life\nTags:Seinen/Animals/Aliens\nAn alien, Mumu, who came to regain the technology lost by his race. The everyday life of an ordinary college student collapses because of his arrival...? A cat shakes the earth! Spectacular romance!!"
+      "description": "Genres: Comedy, Mystery, Sci-Fi, Slice of Life\nTags:Seinen/Animals/Aliens\nA cat-like alien from a distant galaxy, MuMu, arrives on Earth. His goal is to learn about home appliance technology on Earth to recover the technology his species has lost. The protagonist, Sakurako, has a typical university life, but everything changes with MuMu's arrival! What begins as an unexpected cohabitation quickly turns into a whirlwind of chaotic events. The chemistry between Sakurako and MuMu leads to a super-spectacular, appliance-filled, and cat comedy adventure.\n<br><br>\n(Source: Pony Canyon)"
     },
     {
       "id": "tt35346410",
